<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>self_driving_bicycle</name>
  <version>0.1.0</version>
  <description> This package contains the simulation and hardware interface for a self-driving
    bicycle. It includes the URDF model, and the controllers for simulation purposes. And a hardware
    interface for real-world implementation. </description>
  <maintainer email="smart.teen.12345@gmail.com">Ashraf AlAssi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>