<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>self_driving_bicycle</name>
  <version>1.0.0</version>
  <description> This package contains the necessary tools for simulating a self-driving bicycle. It
    includes the URDF model, controllers, SLAM toolbox, and Navigation to implement the bicycle. </description>
  <maintainer email="smart.teen.12345@gmail.com">Ashraf AlAssi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>